Remove compiler warnings: retire deprecated APIs + fix hand-written unchecked (spec 00017) (#139)
* docs(spec 00017): plan compiler-warnings removal (Scope A)

* feat(spec 00017 P1): retire deprecated Locale/HelpFormatter/runFinalization APIs

Mechanical, zero-risk deprecation removals (Scope A, phase 1):
- new Locale(a,b) -> Locale.of(a,b) in LocaleHelper (18) and Application (2)
- System.runFinalization() (deprecated for removal) deleted in WindowHelper
- commons-cli 1.11.0: Option.Builder.build() -> get(); old HelpFormatter ->
  org.apache.commons.cli.help.HelpFormatter (builder + printHelp signature,
  wrapped best-effort as new printHelp throws IOException) in ScanWebsite,
  UpdateCatalog, SnapshotCatalog, MirrorCatalog
- profileview: remove dead native2ascii execution (no resources to convert,
  clears "Source directory does not exist" warning)

* feat(spec 00017 P2): retire deprecated new URL(String) + fix hand-written unchecked

Behavior-touching deprecation removals (Scope A, phase 2):

new URL(String) -> URI conversion (12 sites):
- add Files.toUrl(String): new URI(s).toURL() with a File fallback for
  relative/space-bearing paths, preserving the leniency of new URL(String);
  toUrls() now delegates to it (+ unit tests for the fallback)
- file-path sites route through toUrl: NavigationFormatParser (x2),
  RecentUrlsModel, DeleteRoutes, LocalRoute, LocalRouteDistanceAndTimeFiller
- controlled http/config sites use URI.create(s).toURL(): ApplicationContext,
  TileServerMapSource, BrowsePanel, ClassPathExtender (custom jarinjar: scheme)
- LocalCategory collapses new URL(href).toURI() to new URI(href)

commons-cli 1.11.0 in the two remaining tools missed in P1:
  CheckProxy, FilterResourceBundles (build() -> get(); help.HelpFormatter)

real unchecked warnings (per-site):
- PhotoPanel: build the filter-predicate model via addElement (no generic
  array); type the FilterPredicate<NavigationPosition> locals
- ConvertPanel: narrow @SuppressWarnings to the FormatAn