@@ -26,6 +26,7 @@ import org.mapsforge.map.layer.download.tilesource.OnlineTileSource;
 import slash.navigation.maps.tileserver.TileServer;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Locale;
 import java.util.prefs.Preferences;
@@ -90,6 +91,6 @@ public class TileServerMapSource extends AbstractTileSource {
                 .fmt();
         if(getApiKey() != null)
             url += ("?apikey=" + getApiKey());
-        return new URL(url);
+        return URI.create(url).toURL();
     }
 }
